a sample RAG application based pgvector and spring ai.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,7 +3,7 @@ server.port=8081
 
 # Database Configuration
 spring.sql.init.platform=postgres
-spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
+spring.datasource.url=jdbc:postgresql://localhost:5432/bibliyor
 spring.datasource.username=postgres
 spring.datasource.password=postgres
 
@@ -31,3 +31,8 @@ springdoc.swagger-ui.enabled=true
 spring.ai.azure.openai.api-key=${AZURE_OPENAI_API_KEY}
 spring.ai.azure.openai.endpoint=${AZURE_OPENAI_ENDPOINT}
 spring.ai.azure.openai.embedding.options.deployment-name=text-embedding-ada-002
+
+#Spring AI Vector Store Configuration
+spring.ai.vectorstore.pgvector.index-type=HNSW
+spring.ai.vectorstore.pgvector.distance-type=COSINE_DISTANCE
+spring.ai.vectorstore.pgvector.dimensions=1536
