--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -33,6 +33,4 @@ spring.ai.azure.openai.endpoint=${AZURE_OPENAI_ENDPOINT}
 spring.ai.azure.openai.embedding.options.deployment-name=text-embedding-ada-002
 
 #Spring AI Vector Store Configuration
-spring.ai.vectorstore.pgvector.index-type=HNSW
-spring.ai.vectorstore.pgvector.distance-type=COSINE_DISTANCE
-spring.ai.vectorstore.pgvector.dimensions=1536
+spring.ai.vectorstore.pgvector.initialize-schema=false
