bibliyor db renamed.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,7 +3,7 @@ server.port=8081
 
 # Database Configuration
 spring.sql.init.platform=postgres
-spring.datasource.url=jdbc:postgresql://localhost:5432/bibliyor
+spring.datasource.url=jdbc:postgresql://localhost:5432/bibliyor_db
 spring.datasource.username=postgres
 spring.datasource.password=postgres
 
