biblio placeholder txt files created automatically.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -26,6 +26,7 @@ logging.level.com.zaxxer.hikari=ERROR
 #Swagger
 springdoc.api-docs.enabled=true
 springdoc.swagger-ui.enabled=true
+springdoc.swagger-ui.path=/swagger-ui.html
 
 ##AZURE OPENAI API
 spring.ai.azure.openai.api-key=${AZURE_OPENAI_API_KEY}
@@ -34,3 +35,6 @@ spring.ai.azure.openai.embedding.options.deployment-name=text-embedding-ada-002
 
 #Spring AI Vector Store Configuration
 spring.ai.vectorstore.pgvector.initialize-schema=false
+
+#Biblio Papers
+biblio.target.dir=/Users/aliyamuc/OneDrive - DATASCOPE/RESEARCH_YENI/PUB1 - SLR/deneme/target
