biblio pdf content

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -37,4 +37,4 @@ spring.ai.azure.openai.embedding.options.deployment-name=text-embedding-ada-002
 spring.ai.vectorstore.pgvector.initialize-schema=false
 
 #Biblio Papers
-biblio.target.dir=/Users/aliyamuc/OneDrive - DATASCOPE/RESEARCH_YENI/PUB1 - SLR/deneme/target
+biblio.pdf.dir=/Users/aliyamuc/slr-source/papers-pdf
