--- a/build.gradle
+++ b/build.gradle
@@ -33,7 +33,7 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 	implementation 'org.springframework.ai:spring-ai-azure-openai-spring-boot-starter'
 	implementation 'org.springframework.ai:spring-ai-pgvector-store-spring-boot-starter'
-	implementation 'org.springframework.ai:spring-ai-pdf-document-reader'
+	implementation 'org.apache.pdfbox:pdfbox:2.0.27'
 	implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.5.0'
 
 	implementation('org.apache.poi:poi-ooxml:5.2.5') {
