biblio forOne - one by one

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -38,3 +38,8 @@ spring.ai.vectorstore.pgvector.initialize-schema=false
 
 #Biblio Papers
 biblio.pdf.dir=/Users/aliyamuc/slr-source/papers-pdf
+
+logging.level.org.apache.pdfbox.pdmodel.font.PDSimpleFont=ERROR
+logging.level.org.apache.pdfbox.pdmodel.font.PDType0Font=ERROR
+logging.level.org.apache.fontbox.ttf.CmapSubtable=ERROR
+logging.level.o.a.pdfbox.pdmodel.font.PDType1Font=ERROR
